RESOLVED FIXED116840
[BlackBerry] Clear supression flag when caret changes aren't propogated through
https://bugs.webkit.org/show_bug.cgi?id=116840
Summary [BlackBerry] Clear supression flag when caret changes aren't propogated through
Nima Ghanavatian
Reported 2013-05-27 12:15:10 PDT
We set and clear the flag upon every use. This leaves us vulnerable if 1. midway through processing the selection change event is dismissed and 2. we don't receive a TouchRelease event One example of this is while dragging the FCC handle we start typing. To safeguard against this, if the process change guard is set during a selection change event, we send out to clear the flag status before returning.
Attachments
Patch (2.77 KB, patch)
2013-05-27 12:42 PDT, Nima Ghanavatian
no flags
Nima Ghanavatian
Comment 1 2013-05-27 12:42:23 PDT
Rob Buis
Comment 2 2013-05-27 14:37:26 PDT
Comment on attachment 203002 [details] Patch LGTM.
WebKit Commit Bot
Comment 3 2013-05-27 14:59:39 PDT
Comment on attachment 203002 [details] Patch Clearing flags on attachment: 203002 Committed r150779: <http://trac.webkit.org/changeset/150779>
WebKit Commit Bot
Comment 4 2013-05-27 14:59:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.